# TrafficLightNDN

./: .dockerignore  .env  .gitignore  CMakeLists.txt  DockerFile  Dockerfile  Orchestrator.cpp  Orchestrator.hpp  ProConInterface.cpp  ProConInterface.hpp  README.md  STLNDN.cpp  SmartTrafficLight.cpp  SmartTrafficLight.hpp  YamlParser.cpp  consumer  consumer.cpp  consumerWithTimer.cpp  docker-compose.yml  entrypoint.sh  install-NFD.sh  mainOrchestrator.cpp  procon  procon.cpp  producer  producer.cpp  smartTrafficLight.cpp  stlndn  test.yaml  timedConsumer  timedProCon  timedProCon.cpp  trafficLight.cpp
config/: test.yaml  trust-schema.conf
include/: Enums.hpp  LogLevel.hpp  Orchestrator.hpp  ProConInterface.hpp  SmartTrafficLight.hpp  Structs.hpp  YamlParser.hpp
main/: mainOrchestrator.cpp  mainSTL.cpp
scenarios/: README.md  cabula.yaml  dois-leoes.yaml  test.yaml
src/: Orchestrator.cpp  STLNDN.cpp  SmartTrafficLight.cpp  YamlParser.cpp
